--- a/tracker/templates/tracker/base.html
+++ b/tracker/templates/tracker/base.html
@@ -46,7 +46,7 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Products</a>
+                <a class="nav-link" href="{% url 'product-list' %}">Products</a>
               </li>
             </ul>
           </div>
