--- a/tracker/templates/tracker/article_list.html
+++ b/tracker/templates/tracker/article_list.html
@@ -1,11 +1,12 @@
 {% extends "tracker/base.html" %}
 {% block body %}
 {% for article in object_list%}
-<div class="card">
+<div class="card m-2 bg-secondary">
   <div class="card-body">
-    <h5 class="card-title">{{ article.title }}</h5>
+    <h5 class="card-title text-capitalize">{{ article.title }}</h5>
     <p class="card-text">{{article.subtitle}}</p>
     <a href="{% url 'article-detail' article.id %}" class="btn btn-primary">Learn more</a>
+
   </div>
 </div>
 {% endfor %}
