--- a/tracker/templates/tracker/base.html
+++ b/tracker/templates/tracker/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Website</title>
+    <title>Kotoheath</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -38,7 +38,7 @@
         aria-label="Second navbar example"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">Keto Advantage</a>
+          <a class="navbar-brand" href="{% url 'home' %}">KotoHeath</a>
           <button
             class="navbar-toggler"
             type="button"
