--- a/tracker/templates/tracker/article_detail.html
+++ b/tracker/templates/tracker/article_detail.html
@@ -2,7 +2,7 @@
 
 <div class="card m-2 bg-secondary" style="">
   <div class="card-body">
-    <h5 class="card-title">{{ article.title }}</h5>
+    <h3 class="card-title text-capitalize">{{ article.title }}</h3>
     <p class="card-text">{{article.subtitle}}</p>
     <ol>
       <li>
