--- a/tracker/templates/tracker/article_detail2.html
+++ b/tracker/templates/tracker/article_detail2.html
@@ -2,10 +2,28 @@
 
 <div class="card m-2 bg-secondary" style="">
   <div class="card-body">
-    <h5 class="card-title">{{ article.title }}</h5>
+    <h3 class="card-title text-capitalize">{{ article.title }}</h3>
     <p class="card-text">{{article.subtitle}}</p>
     <h5 class="card-subtitle text-muted text-capitalize">
       {{article.subtitle2}}
+    </h5>
+    <ul>
+      <li>
+        <p>{{article.text9}}</p>
+      </li>
+      <li>
+        <p>{{article.text10}}</p>
+      </li>
+      <li>
+        <p>{{article.text11}}</p>
+      </li>
+    </ul>
+    <h5 class="card-subtitle text-muted text-capitalize">
+      {{article.subtitle3}}
+    </h5>
+    <p>{{article.text12}}</p>
+    <h5 class="card-subtitle text-muted text-capitalize">
+      {{article.subtitle4}}
     </h5>
     <ul>
       <li>
@@ -31,7 +49,7 @@
         <p>{{article.text7}}</p>
       </li>
     </ul>
-    <p>{{article.text8}}</p>
+    <p>{{article.text13}}</p>
   </div>
 </div>
 <div class="row">
