--- a/tracker/templates/tracker/article_detail.html
+++ b/tracker/templates/tracker/article_detail.html
@@ -17,12 +17,13 @@
       <li>
         <p>{{article.text4}}</p>
       </li>
-    </ol>
-    <b>what to avoid</b>
-    <ul>
       <li>
         <p>{{article.text5}}</p>
       </li>
+    </ol>
+    <b class="text-capitalize">what to avoid</b>
+    <ul>
+
       <li>
         <p>{{article.text6}}</p>
       </li>
