--- a/tracker/templates/tracker/article_detail3.html
+++ b/tracker/templates/tracker/article_detail3.html
@@ -4,29 +4,27 @@
   <div class="card-body">
     <h3 class="card-title text-capitalize">{{ article.title }}</h3>
     <p class="card-text">{{article.subtitle}}</p>
-    <h5 class="card-subtitle text-muted text-capitalize">
-      {{article.subtitle2}}
-    </h5>
-         
+    <p>{{article.text1}}</p>
+    <p>{{article.text2}}</p>
+    <b class="card-subtitle">{{article.subtitle2}}</b>
+    <p>{{article.text3}}</p>
+
+
+    <b class="card-subtitle">Macros:</b>
     <ul>
       <li>
-        <p>{{article.text9}}</p>
+        <p>{{article.text5}}</p>
       </li>
+
       <li>
-        <p>{{article.text10}}</p>
+        <p>{{article.text7}}</p>
       </li>
+
       <li>
-        <p>{{article.text11}}</p>
+        <p>{{article.text6}}</p>
       </li>
     </ul>
-    <h5 class="card-subtitle text-muted text-capitalize">
-      {{article.subtitle3}}
-    </h5>
-    <p>{{article.text12}}</p>
-
-     <img class="card-img" src="{{article.image.url}}" alt="" />
-
-    <p>{{article.text13}}</p>
+    <p>{{article.text4}}</p>
   </div>
 </div>
 <div class="row">
