--- a/tracker/templates/tracker/article_detail3.html
+++ b/tracker/templates/tracker/article_detail3.html
@@ -25,6 +25,8 @@
       </li>
     </ul>
     <p>{{article.text4}}</p>
+    <div id="tester" class="text-center" style=""></div>
+
   </div>
 </div>
 <div class="row">
