--- a/tracker/templates/tracker/article_detail.html
+++ b/tracker/templates/tracker/article_detail.html
@@ -1,6 +1,6 @@
 {% extends "tracker/base.html" %} {% block body %}
 
-<div class="card m-2 bg-secondary" style="">
+<div class="card m-2 bg-secondary" id="foodDetailCard">
   <div class="card-body">
     <h3 class="card-title text-capitalize">{{ article.title }}</h3>
     <p class="card-text">{{article.subtitle}}</p>
