--- a/tracker/templates/tracker/article_list.html
+++ b/tracker/templates/tracker/article_list.html
@@ -5,7 +5,9 @@
   <div class="card-body">
     <h5 class="card-title text-capitalize">{{ article.title }}</h5>
     <p class="card-text">{{article.subtitle}}</p>
-    <a href="{% url 'article-detail' article.id %}" class="btn btn-primary">Learn more</a>
+  
+
+    <a href="{% url 'article-detail' article.slug %}" class="btn btn-primary">Learn more</a>
 
   </div>
 </div>
